# cpp-proto

./: README.md
win-app-template/: .gitignore  CMakeLists.txt  README.md  config.json
win-app-template/src/: WinMain.cpp
win-app-template/src/utils/: Environment.hpp  Utils.hpp
win-app-template/test/: ExceptionTrigger.hpp
win-file-scan/: FileScanDemo.cpp  FileWatchers.cpp  FileWatchers.hpp  TailReaderWin.hpp
